package histogram;

option java_package = "me.bpulse.domain.proto.histogram";
option optimize_for = SPEED;

message Interval{
	required int32 gte = 1;	
	required int32 lt = 2;
}

message QuantitySecond{
	required int32 s = 1;	
	required int64 q = 2;
	required float PCT = 3;
}

message QuantityMinute{
	required int32 mi = 1;	
	required int64 q = 2;
	required float PCT = 3;
	repeated QuantitySecond sc = 4;
}

message QuantityHour{
	required int32 h = 1;
	required int64 q = 2;
	required float PCT = 3;
	repeated QuantityMinute mts = 4;
}

message QuantityDay{
	required int32 d = 1;
	required int64 q = 2;
	required float PCT = 3;
	repeated QuantityHour hs = 4;
}

message QuantityMonth{
	required int32 m = 1;
	required int64 q = 2;
	required float PCT = 3;
	repeated QuantityDay ds = 4;

}


message QuantityYear{
	required int32 y = 1;
	required int64 q = 2;
	required float PCT = 3;
	repeated QuantityMonth ms = 4;
}

message Quantities{
	repeated QuantityYear ys = 1;
	required Interval interval = 2;
}

message HistogramQuantitiesRS{
	required string id = 1;
	required string shortName = 2;
	required int64 rsTime = 3;
	repeated Quantities quantities = 5;
}